cmake_minimum_required(VERSION 3.22)
project(study_code)

set(CMAKE_CXX_STANDARD 14)

#Chapter0 测试代码
add_executable(study_code CPP/9文件操作_文件指针.cpp)

#数据结构部分
#add_executable(study_code DateStruct/LineList.h DateStruct/Test.cpp DateStruct/abstractLine.h DateStruct/Array.h DateStruct/Tree.h DateStruct/DynamicArray.h DateStruct/LinkList.h DateStruct/DoubleLinkList.h DateStruct/CircleLink.h DateStruct/stack.h DateStruct/queue.h)
